--- a/templates/josef/css/pdf.css
+++ b/templates/josef/css/pdf.css
@@ -31,20 +31,20 @@ body.pdf {
         text-transform: uppercase;
         font-weight: normal;
     }
+
     h2 {
         letter-spacing: 0;
         text-transform: uppercase;
-        font-style: italic;
         font-weight: normal;
     }
     h3 {
         float: left;
-        width: 16%;
+        width: 20%;
         font-style: normal;
     }
     h3+p {
         float: left;
-        width: 78%;
+        width: 75%;
     }
 
     blockquote {
@@ -72,7 +72,7 @@ body.pdf {
 
     ol {
         float: left;
-        width: 79%;
+        width: 75%;
         margin: .7em 0 0;
     }
 
@@ -88,10 +88,10 @@ body.pdf {
     }
 
     dl {
-        margin: .7em 0 0;
+        margin: 0 0;
         page-break-inside: avoid !important;
         display: block;
-        width:79%;
+        width:75%;
         float: left;
         dt {}
         dd {
